--- a/youtube.html
+++ b/youtube.html
@@ -21,7 +21,7 @@
             </div>
             <div class="center">
                 <div class="searchbar">
-                    <input type="text" placeholder="Search"/>
+                    <input type="search" placeholder="Search"/>
                     <div class="search">
                         <img style="width: 20px; height: 20px; background-color: none;" src="images/magnifying-glass.png"/>
                     </div>
